# scd4x

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml
scd4x/: __init__.py  crc.pyx
