[tool.poetry]
name = "scd4x"
version = "0.2.2"
description = ""
authors = ["Zachary Juang <zachary822@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
smbus2 = "^0.4.2"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
filter_files = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
